# packages/shared-schemas/src/inspections/index.ts
@@ -1,0 +1,3 @@
+export * from './inspection.schema';
+export * from './observations.schema';
+export * from './status';
